--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,9 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile files('D:/Users/icerunemage1/AndroidStudioProjects/DebtOverview/libs/tess-two.jar')
+    compile  'com.facebook.android:facebook-android-sdk:[4,5)'
 }
